--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,15 @@ pandas
 matplotlib
 seaborn
 flask
-numpy
+numpy==1.19.5
 scikit-learn
 PyYAML
 notebook
 ipykernel
 python-box==6.0.2
 ensure==1.0.2
+selenium
+statsmodels
+tensorflow==2.4.1
 
 -e .
