--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,12 @@ ipykernel
 python-box==6.0.2
 ensure==1.0.2
 selenium
-statsmodels
+statsmodels  
 tensorflow==2.17.0
 pymongo
 from_root
 dill
 python-dotenv
+flask_cors
 
 -e .
